# gICM

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_SUMMARY.txt  AUTONOMY.md  CLAUDE.md  COMMANDS_CREATED.md  COMPETITIVE_RESPONSE.md  CRYPTO.md  Dockerfile  Dockerfile.dashboard  ENV_SETUP.md  FILE_CREATION_REPORT.md  GRAB-SKILLS-EXPANSION-COMPLETE.md  IMPROVEMENTS_LOG.md  INSTALLATION.md  LAUNCH_CHECKLIST.md  LAUNCH_CONTENT.md  LAUNCH_FIXES.md  LAUNCH_NOW.md  MARKETPLACE_COMPLETION_REPORT.md  MCP_AUDIT_REPORT.md  MCP_CONFIGS.md  MCP_PLUGIN_GUIDE.md  MCP_QUICK_REFERENCE.md  NEXT_STEPS.md  OPUS67_SKILLS_EXPANSION_COMPLETE.md  PERFORMANCE_AUDIT.md  PROGRESS.md  PROJECT_STATUS.md  QA_CHECKLIST.md  QUICK_START.md  README.md  RESUME_HERE.md  SAAS_SKILLS_DELIVERY.md  SECURITY_BACKLOG.md  SESSION_1_REPORT.md  SESSION_2_SUMMARY.md  (+31 more)
.analytics/: events.json
.claude/: CLAUDE.md  phase2-specs.json  settings.local.json
.claude-plugin/: README.md
.gicm/: .gitignore  config.json
.waitlist/: emails.json
services/ai-hedge-fund/: .env.example  pyproject.toml  railway.toml
services/ai-hedge-fund/src/agents/: base_agent.py
services/ai-hedge-fund/src/agents/crypto/: degen_agent.py  onchain_agent.py  pump_trader.py  solana_agent.py  whale_agent.py
services/ai-hedge-fund/src/agents/management/: portfolio_manager.py
services/ai-hedge-fund/src/agents/personas/: bill_ackman.py  cathie_wood.py  charlie_munger.py  michael_burry.py  warren_buffett.py
services/ai-hedge-fund/src/api/: app.py  routes.py
services/ai-hedge-fund/src/data/: __init__.py  coinmarketcap.py  pumpfun.py  repository.py  rugcheck.py  supabase_client.py  vybe.py
services/ai-hedge-fund/tests/: conftest.py  test_smoke.py
services/context-engine/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
services/context-engine/config/: claude-mcp.json  cursor-mcp.json
services/context-engine/scripts/: index-gicm-registry.py  index-local.py
services/context-engine/src/: __init__.py  main.py  mcp_server.py
services/context-engine/src/db/: __init__.py  qdrant.py
services/context-engine/src/embeddings/: __init__.py  gemini.py  openai.py
services/context-engine/src/indexer/: __init__.py  chunker.py  gicm_indexer.py  git_indexer.py
services/context-engine/src/search/: __init__.py  semantic.py
(+1400 files in other folders)
